@@ -1,6 +1,5 @@
 package edu.norcocollege.cis18b.week5.mini03;
 
-import java.util.Arrays;
 import java.util.Comparator;
 import java.util.HashSet;
 import java.util.LinkedHashSet;
@@ -11,52 +10,24 @@ import java.util.TreeSet;
 public class SetComparisonDemo {
 
     public static void main(String[] args) {
-        List<String> tags = Arrays.asList(
-                "queue", "stack", "map", "set", "queue", "Map", "STACK"
-        );
+        List<String> tags = List.of("queue", "stack", "map", "set", "stack", "Queue");
 
-        Set<String> hashSet = toHashSet(tags);
-        Set<String> linkedHashSet = toLinkedHashSet(tags);
-        Set<String> treeSet = toTreeSet(tags);
-        Set<String> caseInsensitiveTreeSet = toCaseInsensitiveTreeSet(tags);
+        Set<String> hashSet = new HashSet<>(tags);
+        Set<String> linkedHashSet = new LinkedHashSet<>(tags);
+        Set<String> treeSet = new TreeSet<>(tags);
 
-        System.out.println("Source list: " + tags);
         System.out.println("HashSet: " + hashSet);
         System.out.println("LinkedHashSet: " + linkedHashSet);
         System.out.println("TreeSet: " + treeSet);
-        System.out.println("Case-insensitive TreeSet: " + caseInsensitiveTreeSet);
-        System.out.println();
-        System.out.println("HashSet explanation: order is not reliable.");
-        System.out.println("LinkedHashSet explanation: preserves insertion order.");
-        System.out.println("TreeSet explanation: keeps unique values in sorted order.");
-        System.out.println("Case-insensitive TreeSet explanation: comparator affects ordering and can treat values like Map and map as duplicates.");
-    }
 
-    public static Set<String> toHashSet(List<String> tags) {
-        return new HashSet<>(tags);
-    }
+        Set<String> caseInsensitive = new TreeSet<>(String.CASE_INSENSITIVE_ORDER);
+        caseInsensitive.addAll(tags);
+        System.out.println("TreeSet (case-insensitive): " + caseInsensitive);
 
-    public static Set<String> toLinkedHashSet(List<String> tags) {
-        return new LinkedHashSet<>(tags);
-    }
-
-    public static Set<String> toTreeSet(List<String> tags) {
-        return new TreeSet<>(tags);
-    }
-
-    public static Set<String> toCaseInsensitiveTreeSet(List<String> tags) {
-        Set<String> set = new TreeSet<>(String.CASE_INSENSITIVE_ORDER);
-        set.addAll(tags);
-        return set;
-    }
-
-    public static Set<String> toLengthThenAlphabeticalTreeSet(List<String> tags) {
-        Comparator<String> comparator = Comparator
-                .comparingInt(String::length)
-                .thenComparing(String::compareToIgnoreCase);
-
-        Set<String> set = new TreeSet<>(comparator);
-        set.addAll(tags);
-        return set;
+        Set<String> customOrder = new TreeSet<>(
+            Comparator.comparingInt(String::length).thenComparing(String::compareTo)
+        );
+        customOrder.addAll(tags);
+        System.out.println("TreeSet (custom comparator): " + customOrder);
     }
 }
